# robot_control

./: .gitattributes  .gitignore  CLAUDE.md  EGM_COMM.cfg  EGM_MOC.cfg  README.md  abb_egm.py  abb_rws.py  crb15000_12_127.urdf  crb15000_5_95.urdf  egm.proto  hande.urdf  hande_gripper.py  install_gofa_egm.py  install_gofa_rapid.py  play_trajectory.py  robot_common.py  teleop.py  teleop_gofa.py  teleop_gofa_egm.py  teleop_ur15.py  verify_hande.py
abb_desc/: README.md
abb_desc/.github/workflows/: ci_ros1.yml
abb_desc/abb/: CHANGELOG.rst  package.xml
abb_desc/abb_crb15000_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_crb15000_support/launch/: load_crb15000_12_127.launch  load_crb15000_5_95.launch  test_crb15000_12_127.launch
abb_desc/abb_crb15000_support/meshes/crb15000_12_127/collision/: base_link.stl  link_1.stl  link_2.stl  link_4.stl
abb_desc/abb_crb15000_support/meshes/crb15000_12_127/visual/: base_link.stl  link_1.stl  link_2.stl  link_4.stl
abb_desc/abb_crb15000_support/meshes/crb15000_5_95/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
abb_desc/abb_crb15000_support/meshes/crb15000_5_95/visual/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
abb_desc/abb_crb15000_support/tests/: roslaunch_test_crb15000_12_127.xml
abb_desc/abb_crb15000_support/urdf/: crb15000_12_127.xacro  crb15000_12_127_macro.xacro
abb_desc/abb_irb1200_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb1200_support/launch/: load_irb1200_5_90.launch  load_irb1200_7_70.launch  test_irb1200_5_90.launch  test_irb1200_7_70.launch
abb_desc/abb_irb120_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb120_support/launch/: load_irb120_3_58.launch  load_irb120t_3_58.launch  robot_interface_download_irb120_3_58.launch  robot_interface_download_irb120t_3_58.launch  robot_state_visualize_irb120_3_58.launch  robot_state_visualize_irb120t_3_58.launch  test_irb120_3_58.launch  test_irb120t_3_58.launch
abb_desc/abb_irb120_support/tests/: roslaunch_test_irb120_3_58.xml  roslaunch_test_irb120t_3_58.xml
abb_desc/abb_irb1600_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb1600_support/launch/: load_irb1600_10_145.launch  load_irb1600_6_12.launch  load_irb1600_8_145.launch  robot_interface_download_irb1600_10_145.launch  robot_interface_download_irb1600_6_12.launch  robot_interface_download_irb1600_8_145.launch  robot_state_visualize_irb1600_10_145.launch  robot_state_visualize_irb1600_6_12.launch  robot_state_visualize_irb1600_8_145.launch  test_irb1600_10_145.launch  test_irb1600_6_12.launch  test_irb1600_8_145.launch
abb_desc/abb_irb2400_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb2400_support/launch/: load_irb2400.launch  load_irb2400_12_155.launch  robot_interface_download_irb2400.launch  robot_state_visualize_irb2400.launch  robot_state_visualize_irb2400_12_155.launch  test_irb2400.launch  test_irb2400_12_155.launch
abb_desc/abb_irb2600_support/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
abb_desc/abb_irb4400_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb4400_support/launch/: load_irb4400l_30_243.launch  robot_interface_download_irb4400l_30_243.launch  robot_state_visualize_irb4400l_30_243.launch  test_irb4400l_30_243.launch
abb_desc/abb_irb4400_support/meshes/irb4400l_30_243/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
abb_desc/abb_irb4400_support/meshes/irb4400l_30_243/visual/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
abb_desc/abb_irb4600_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb52_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb5400_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb6600_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb6640_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb6650s_support/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
abb_desc/abb_irb6700_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/abb_irb6700_support/launch/: load_irb6700_200_260.launch  load_irb6700_235_265.launch  test_irb6700_200_260.launch  test_irb6700_235_265.launch
abb_desc/abb_irb7600_support/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
abb_desc/abb_resources/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/gazebo/: README.md
abb_desc/gazebo/abb_irb1200_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_desc/gazebo/abb_irb1200_gazebo/launch/: irb1200_5_90_control.launch  irb1200_5_90_gazebo.launch  load_irb1200_5_90.launch
abb_desc/gazebo/abb_irb120_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml  readme.md
abb_desc/gazebo/abb_irb120_gazebo/launch/: irb120_control.launch  irb120_gazebo.launch  irb120t_3_58_gazebo.launch  load_irb120_3_58.launch  load_irb120t_3_58.launch
apps/: play_trajectory.py  teleop.py  teleop_gofa_egm.py  teleop_ur15.py  verify_hande.py
lib/: dispatch.py  egm.proto  egm_pb2.py  robot_api.py  robot_common.py  robot_sim.py
lib/control/: __init__.py  base.py  gofa.py  state.py  ur.py
pyroki_snippets/: __init__.py  _solve_ik_seeded.py
pyroki_src/examples/: 01_basic_ik.py  14_singularity_aware_ik.py
robotiq_hande_description/: CHANGELOG.md  CITATION.cff  README.md  package.xml
robotiq_hande_description/meshes/: finger.dae  finger_collision.dae  hande.dae  io_coupler.dae
robotiq_hande_description/urdf/: cylinder_inertial.xacro  robotiq_hande_gripper.ros2_control.xacro  robotiq_hande_gripper.urdf.xacro  robotiq_hande_gripper.xacro
scripts/: api_server.py  api_smoketest.py  control_smoketest.py  install_gofa_egm.py  play_trajectory.py  real.py  sim.py  sim_smoketest.py  teleop.py  teleop_gofa_egm.py  teleop_ur15.py  verify_hande.py
trajectories/: _sample_gofa.json  _sample_ur15.json
ur_desc/: CHANGELOG.rst  package.xml
(+337 files in other folders)
