<?xml version="1.0"?>
<package format="2">
  <name>abb</name>
  <version>1.5.0</version>
  <description>ROS-Industrial support for ABB manipulators (metapackage).</description>
  <author>Shaun Edwards</author>
  <author>Levi Armstrong (SwRI)</author>
  <maintainer email="noreply@rosindustrial.org">ROS-Industrial community</maintainer>
  <license>BSD-3-Clause</license>
  <license>Apache-2.0</license>

  <url type="website">http://ros.org/wiki/abb</url>
  <url type="repository">https://github.com/ros-industrial/abb</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_crb15000_support</exec_depend>
  <exec_depend>abb_irb1200_support</exec_depend>
  <exec_depend>abb_irb120_support</exec_depend>
  <exec_depend>abb_irb1600_support</exec_depend>
  <exec_depend>abb_irb2400_support</exec_depend>
  <exec_depend>abb_irb2600_support</exec_depend>
  <exec_depend>abb_irb4400_support</exec_depend>
  <exec_depend>abb_irb4600_support</exec_depend>
  <exec_depend>abb_irb52_support</exec_depend>
  <exec_depend>abb_irb5400_support</exec_depend>
  <exec_depend>abb_irb6600_support</exec_depend>
  <exec_depend>abb_irb6640_support</exec_depend>
  <exec_depend>abb_irb6650s_support</exec_depend>
  <exec_depend>abb_irb6700_support</exec_depend>
  <exec_depend>abb_irb7600_support</exec_depend>
  <exec_depend>abb_resources</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
