<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>abb_irb1200_support</name>
  <version>1.5.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 1200 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 1200 manipulators. This currently includes the IRB 1200-5/0.9
      and the IRB 1200-7/0.7 variants.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <em>ABB IRB 1200 Datasheet</em>, document ID: <em>ROB0275EN_A, Sept 2016</em>.
      All urdfs / xacros are based on the default motion and joint velocity
      limits, unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Note 1: inertial and dynamics values for the 5/0.9 variant were calculated
      from the meshes using <em>Meshlab</em>, assuming constant density.
      As the datasheet only provides the mass of the entire robot,
      the mass of each link was estimated based on its volume, assuming
      constant density for the entire robot.
    </p>
    <p>
      Note 2: maximum joint effort values for the 5/0.9 variant do not
      correspond to real world limits of the robot. The current values were
      chosen to accomodate Gazebo simulations of this specific variant but
      are fictional values.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Geoffrey Chiou (SwRI)</author>
  <author>Levi Armstrong (SwRI)</author>
  <maintainer email="noreply@rosindustrial.org">ROS-Industrial community</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/abb_irb1200_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>abb_driver</exec_depend>
  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
