<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>abb_irb120_support</name>
  <version>1.5.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 120 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 120 manipulators. This includes the base model (120) and
      the 120T.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="http://new.abb.com/products/robotics/industrial-robots/irb-120/irb-120-data">
      ABB IRB 120 technical data sheet</a> (Version: ROB0149EN_D, May 2012).
      All urdfs / xacros are based on the default motion and joint velocity
      limits, unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Inertial and mass properties were calculated using 3D modelling software, based on the 
      supplied <a href="http://new.abb.com/products/robotics/industrial-robots/irb-120/irb-120-cad">
      ABB IRB 120 CAD model</a>.
    </p> 
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Mark Culleton (Trinity College Dublin)</author>
  <author>Kevin Kelly (Trinity College Dublin)</author>
  <author>Levi Armstrong (SwRI)</author>
  <maintainer email="noreply@rosindustrial.org">ROS-Industrial community</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/abb_irb120_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
