<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>abb_irb4400_support</name>
  <version>1.5.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 4400 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 4400 manipulators. This currently includes the L30.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="http://www05.abb.com/global/scot/scot352.nsf/veritydisplay/c90b98aaa057bd6ec12576cb00528ef6/$file/Product%20specification%204400%20M99%20BWOS3.2.pdf">
      ABB IRB 4400 product specification document</a> (Article No: 3HAC 8770-1).
      All urdfs / xacros are based on the default motion and joint velocity
      limits, unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Dan Solomon</author>
  <author>Levi Armstrong (SwRI)</author>
  <maintainer email="noreply@rosindustrial.org">ROS-Industrial community</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/abb_irb4400_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
