<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>abb_irb120_gazebo</name>
  <version>1.5.0</version>
  <description>
    <p>
      ROS-Industrial Gazebo support package for the ABB IRB 120 (and variants).
    </p>
    <p>
      This package contains the configuration data and launch files required
      to simulate the ABB IRB 120 manipulator in Gazebo. This includes the base
      model and the 120T.
    </p>
    <p>
      Before using any of the configuration files included in this package, be
      sure to check they are correct for the particular robot model and
      configuration you intend to use them with.
    </p>
  </description>
  <author>Mark Culleton (Trinity College Dublin)</author>
  <author>Kevin Kelly (Trinity College Dublin)</author>
  <author>Levi Armstrong (SwRI)</author>
  <maintainer email="noreply@rosindustrial.org">ROS-Industrial community</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/abb</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>abb_irb120_support</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
